...
        android:background="@drawable/rounded_popup"
        android:clickable="true"
        android:text="Show posts from recent week"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/emotional_state_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_popup"
        android:clickable="true"
        android:text="Filter by emotional state"
...
