<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="dialog_filter_edit_text" type="id"/>
</resources>
